fixes to sh helpers, edit distance added, deque in minimizer and test for minimizer.