@@ -1,9 +1,12 @@
 package co.kukurin;
 
 import co.kukurin.Hasher.Hash;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Deque;
 import java.util.List;
 import java.util.TreeMap;
+import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import lombok.Value;
 
@@ -11,48 +14,59 @@ import lombok.Value;
 public class Minimizer {
 
   @Value
-  public static class MinimizerValue {
+  public static class MinimizerValue implements Comparable<MinimizerValue> {
 
     private final int originalIndex;
     private final Hash value;
+
+    @Override
+    public int compareTo(MinimizerValue o) {
+      int hashCompare = value.compareTo(o.value);
+
+      return hashCompare == 0
+          ? Integer.compare(originalIndex, o.originalIndex)
+          : hashCompare;
+    }
   }
 
+  // private final int sketchSize;
   private final int windowSize;
+  private final int kmerSize; // TODO unused (paper algo. computes hash + minimizes at once)
 
   public List<MinimizerValue> minimize(List<Hash> hashes) {
-    // TODO deque
-    TreeMap<Hash, Integer> hashToLargestIndex = new TreeMap<>();
+    Deque<MinimizerValue> deque = new ArrayDeque<>(windowSize);
     List<MinimizerValue> minimizers = new ArrayList<>();
 
-    for (int i = 0; i < windowSize; i++) {
-      hashToLargestIndex.put(hashes.get(i), i);
-    }
+    for (int i = 0; i < hashes.size(); i++) {
+      Hash currentHash = hashes.get(i);
+      MinimizerValue minimizerValue = new MinimizerValue(i, currentHash);
 
-    minimizers.add(extractSmallestMinimizer(hashToLargestIndex));
-    for (int i = windowSize; i < hashes.size(); i++) {
-      MinimizerValue minimizerValue = extractSmallestMinimizer(hashToLargestIndex);
-      boolean originalIndexAlreadyInMinimizers = minimizerValue.getOriginalIndex()
-          == minimizers.get(minimizers.size() - 1).getOriginalIndex();
-
-      if (!originalIndexAlreadyInMinimizers) {
-        minimizers.add(minimizerValue);
+      // remove elements out of window
+      int deletionIndex = i - windowSize;
+      while (!deque.isEmpty() && deque.getLast().originalIndex <= deletionIndex) {
+        deque.pollLast();
       }
 
-      int deletionIndex = i - windowSize;
-      hashToLargestIndex.compute(
-          hashes.get(deletionIndex),
-          (key, largestIndex) -> largestIndex == deletionIndex ? null : largestIndex);
-      hashToLargestIndex.put(hashes.get(i), i);
-    }
+      // compare head to new value
+      while (!deque.isEmpty() && deque.getFirst().getValue().compareTo(currentHash) >= 0) {
+        deque.pollFirst();
+      }
 
-//    minimizers.add(extractSmallestMinimizer(hashToLargestIndex));
+      // push to head
+      deque.push(minimizerValue);
+
+      if (i < windowSize - 1) {
+        continue;
+      }
+
+      if (minimizers.isEmpty() ||
+          deque.getLast().getOriginalIndex()
+              != minimizers.get(minimizers.size() - 1).getOriginalIndex()) {
+        minimizers.add(deque.getLast());
+      }
+    }
 
     return minimizers;
   }
 
-  private MinimizerValue extractSmallestMinimizer(TreeMap<Hash, Integer> hashToLargestIndex) {
-    Hash smallestValueInWindow = hashToLargestIndex.firstKey();
-    int indexForSmallestValue = hashToLargestIndex.get(smallestValueInWindow);
-    return new MinimizerValue(indexForSmallestValue, smallestValueInWindow);
-  }
 }
